--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -529,6 +529,36 @@ footer
         border-bottom: 1px solid $text-light-gray
         padding-bottom: 30px
         margin-bottom: 30px
+    .pagination
+      clear: left
+      width: 596px
+      a
+        display: block
+        padding: 6px 12px
+        margin-bottom: 0
+        text-align: center
+        cursor: pointer
+        background-image: none
+        border: 1px solid transparent
+        color: #fff
+        background: $orange
+        font-size: 16px
+        line-height: 40px
+        font-family: $serif
+        margin-top: 10px
+        width: 220px
+        font-style: italic
+        text-decoration: none
+        &:first-child
+          float: right
+        &:last-child
+          float: left
+      &:after
+        content: ""
+        clear: both
+        width: 100%
+        height: 1px
+        display: block
     #news-sidebar
       float: right
       padding-left: 75px 
