--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -563,22 +563,28 @@ footer
       float: right
       padding-left: 75px 
       width: 334px
+      a
+        color: $copper
+      .news-sidebar-section
+        margin-bottom: 40px
       h1
         font-family: $sans
         color: $text-gray
         text-transform: uppercase
         font-size: 32px
-        line-height: 32px
+        line-height: 40px
         text-align: center
       ul
         padding: 0px
         h4
           font-size: 14px
           margin-bottom: 5px
+          margin-top: -4px
         li
           border-bottom: 1px solid $text-light-gray
           list-style: none
-          padding: 20px 0
+          padding: 14px 0
+          margin-bottom: 0
           float: left
           a 
             font-family: $handwriting
