--- a/public/css/main.css
+++ b/public/css/main.css
@@ -958,20 +958,64 @@ main#content .container {
   display: block;
 }
 /* line 562, sass/main.sass */
+#news .container .news-search {
+  width: 596px;
+  min-height: 300px;
+}
+/* line 566, sass/main.sass */
+#news .container .news-search .result-listing {
+  margin: 0;
+  padding: 0;
+}
+/* line 569, sass/main.sass */
+#news .container .news-search .result-listing li {
+  border-bottom: 1px solid #E2E2E2;
+  list-style: none;
+  padding: 14px 0;
+  margin: 0;
+}
+/* line 574, sass/main.sass */
+#news .container .news-search .result-listing li:last-child {
+  border-bottom: none;
+}
+/* line 576, sass/main.sass */
+#news .container .news-search .result-listing li img {
+  float: left;
+  margin-right: 25px;
+}
+/* line 579, sass/main.sass */
+#news .container .news-search .result-listing a {
+  color: #333333;
+  text-decoration: none;
+}
+/* line 582, sass/main.sass */
+#news .container .news-search .result-listing a span {
+  color: #B24629;
+  display: block;
+}
+/* line 585, sass/main.sass */
+#news .container .news-search .result-listing a span:last-child {
+  color: #333333;
+}
+/* line 587, sass/main.sass */
+#news .container .news-search .no-results {
+  font-size: 18px;
+}
+/* line 589, sass/main.sass */
 #news .container #news-sidebar {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 566, sass/main.sass */
+/* line 593, sass/main.sass */
 #news .container #news-sidebar a {
   color: #B24629;
 }
-/* line 568, sass/main.sass */
+/* line 595, sass/main.sass */
 #news .container #news-sidebar .news-sidebar-section {
   margin-bottom: 40px;
 }
-/* line 570, sass/main.sass */
+/* line 597, sass/main.sass */
 #news .container #news-sidebar h1 {
   font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
   color: #999999;
@@ -980,17 +1024,17 @@ main#content .container {
   line-height: 40px;
   text-align: center;
 }
-/* line 577, sass/main.sass */
+/* line 604, sass/main.sass */
 #news .container #news-sidebar ul {
   padding: 0px;
 }
-/* line 579, sass/main.sass */
+/* line 606, sass/main.sass */
 #news .container #news-sidebar ul h4 {
   font-size: 14px;
   margin-bottom: 5px;
   margin-top: -4px;
 }
-/* line 583, sass/main.sass */
+/* line 610, sass/main.sass */
 #news .container #news-sidebar ul li {
   border-bottom: 1px solid #E2E2E2;
   list-style: none;
@@ -998,7 +1042,7 @@ main#content .container {
   margin-bottom: 0;
   float: left;
 }
-/* line 589, sass/main.sass */
+/* line 616, sass/main.sass */
 #news .container #news-sidebar ul li a {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   text-decoration: none;
@@ -1006,35 +1050,35 @@ main#content .container {
   float: left;
   font-size: 20px;
 }
-/* line 595, sass/main.sass */
+/* line 622, sass/main.sass */
 #news .container #news-sidebar ul li a:hover {
   color: #ED8F17;
 }
-/* line 597, sass/main.sass */
+/* line 624, sass/main.sass */
 #news .container #news-sidebar ul li img {
   float: left;
   margin-right: 10px;
 }
 
-/* line 604, sass/main.sass */
+/* line 631, sass/main.sass */
 #contact .prefer_email {
   clear: both;
   padding-top: 30px;
 }
-/* line 607, sass/main.sass */
+/* line 634, sass/main.sass */
 #contact .prefer_email a {
   color: #B24629;
   text-decoration: none;
 }
-/* line 610, sass/main.sass */
+/* line 637, sass/main.sass */
 #contact .prefer_email a:hover {
   text-decoration: underline;
 }
-/* line 612, sass/main.sass */
+/* line 639, sass/main.sass */
 #contact .success {
   display: none;
 }
-/* line 614, sass/main.sass */
+/* line 641, sass/main.sass */
 #contact .errors {
   display: none;
   font-style: italic;
@@ -1043,44 +1087,44 @@ main#content .container {
   border-bottom: 1px solid #B24629;
   margin: 20px 0;
 }
-/* line 621, sass/main.sass */
+/* line 648, sass/main.sass */
 #contact .errors ul li {
   font-size: 14px;
   margin-bottom: 5px;
 }
-/* line 624, sass/main.sass */
+/* line 651, sass/main.sass */
 #contact .errors ul li:last-child {
   margin-bottom: 0;
 }
-/* line 626, sass/main.sass */
+/* line 653, sass/main.sass */
 #contact form {
   margin-top: 20px;
 }
-/* line 628, sass/main.sass */
+/* line 655, sass/main.sass */
 #contact form .form-left {
   float: left;
   width: 240px;
 }
-/* line 631, sass/main.sass */
+/* line 658, sass/main.sass */
 #contact form .form-right {
   float: left;
 }
-/* line 633, sass/main.sass */
+/* line 660, sass/main.sass */
 #contact form #location {
   display: none;
 }
-/* line 635, sass/main.sass */
+/* line 662, sass/main.sass */
 #contact label, #contact input, #contact button, #contact select, #contact textarea {
   font-size: 14px;
   font-weight: normal;
   line-height: 20px;
 }
-/* line 639, sass/main.sass */
+/* line 666, sass/main.sass */
 #contact .required {
   color: red;
   padding-left: 5px;
 }
-/* line 643, sass/main.sass */
+/* line 670, sass/main.sass */
 #contact input[type="submit"] {
   -webkit-appearance: button;
   display: block;
@@ -1098,12 +1142,12 @@ main#content .container {
   margin-top: 10px;
   width: 220px;
 }
-/* line 660, sass/main.sass */
+/* line 687, sass/main.sass */
 #contact label {
   display: block;
   margin-bottom: 5px;
 }
-/* line 664, sass/main.sass */
+/* line 691, sass/main.sass */
 #contact select, #contact textarea {
   display: inline-block;
   height: 20px;
@@ -1114,7 +1158,7 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 676, sass/main.sass */
+/* line 703, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   display: inline-block;
   height: 20px;
@@ -1125,11 +1169,11 @@ main#content .container {
   color: #555555;
   vertical-align: middle;
 }
-/* line 686, sass/main.sass */
+/* line 713, sass/main.sass */
 #contact input {
   width: 206px;
 }
-/* line 689, sass/main.sass */
+/* line 716, sass/main.sass */
 #contact textarea {
   width: 340px;
   height: 140px;
@@ -1143,7 +1187,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 703, sass/main.sass */
+/* line 730, sass/main.sass */
 #contact input[type="text"], #contact input[type="password"], #contact input[type="datetime"], #contact input[type="datetime-local"], #contact input[type="date"], #contact input[type="month"], #contact input[type="time"], #contact input[type="week"], #contact input[type="number"], #contact input[type="email"], #contact input[type="url"], #contact input[type="search"], #contact input[type="tel"], #contact input[type="color"] {
   background-color: #ffffff;
   border: 1px solid #cccccc;
@@ -1155,7 +1199,7 @@ main#content .container {
   -o-transition: border linear 0.2s, box-shadow linear 0.2s;
   transition: border linear 0.2s, box-shadow linear 0.2s;
 }
-/* line 714, sass/main.sass */
+/* line 741, sass/main.sass */
 #contact textarea:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1163,7 +1207,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 722, sass/main.sass */
+/* line 749, sass/main.sass */
 #contact input[type="text"]:focus, #contact input[type="password"]:focus, #contact input[type="datetime"]:focus, #contact input[type="datetime-local"]:focus, #contact input[type="date"]:focus, #contact input[type="month"]:focus, #contact input[type="time"]:focus, #contact input[type="week"]:focus, #contact input[type="number"]:focus, #contact input[type="email"]:focus, #contact input[type="url"]:focus, #contact input[type="search"]:focus, #contact input[type="tel"]:focus, #contact input[type="color"]:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1171,7 +1215,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 729, sass/main.sass */
+/* line 756, sass/main.sass */
 #contact .uneditable-input:focus {
   border-color: rgba(82, 168, 236, 0.8);
   outline: 0;
@@ -1179,7 +1223,7 @@ main#content .container {
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-/* line 737, sass/main.sass */
+/* line 764, sass/main.sass */
 #contact input[type="radio"], #contact input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9;
