--- a/craft/templates/news/archive.html
+++ b/craft/templates/news/archive.html
@@ -5,7 +5,7 @@
 
   <div id="news-sidebar">
 
-    <div class="news-sidebar-section">
+    <div class="news-sidebar-section news-search-form">
       <h1>Search Archives</h1>
       <form action="{{ url('news/archive') }}">
         <input type="search" name="q" placeholder="SEARCH">
