--- a/craft/templates/news/index.html
+++ b/craft/templates/news/index.html
@@ -11,7 +11,7 @@
       <a href="{{siteUrl}}/awards">Our Awards</a>
     </div>
 
-    <div class="news-sidebar-section">
+    <div class="news-sidebar-section news-search-form">
       <h1>Search Archives</h1>
       <form action="{{ url('news/archive') }}">
         <input type="search" name="q" placeholder="SEARCH">
