--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -559,6 +559,30 @@ footer
         width: 100%
         height: 1px
         display: block
+    .news-search-form
+      form
+        position: relative
+        input[type=search]
+          width: 100%
+          border: none
+          height: 48px
+          line-height: 48px
+          -webkit-appearance: none
+          background-color: $text-light-gray
+          font-family: $sans
+          color: $text-gray
+          font-size: 24px
+          text-indent: 8px
+        input[type=submit]
+          position: absolute
+          right: 0
+          top: 0
+          width: 48px
+          height: 48px
+          border: none
+          background: #F48F1B image-url('site/search.png') no-repeat center center
+          text-indent: -10000px
+
     .news-search
       width: 596px
       min-height: 300px
@@ -599,7 +623,7 @@ footer
         color: $text-gray
         text-transform: uppercase
         font-size: 32px
-        line-height: 40px
+        line-height: 52px
         text-align: center
       ul
         padding: 0px
