--- a/craft/templates/news/index.html
+++ b/craft/templates/news/index.html
@@ -8,7 +8,7 @@
     <div class="news-sidebar-section">
       <h1>Awards</h1>
       <p>See a short list of awards our wines have collected over the years</p>
-      <a href="{{siteUrl}}/awards">Our Awards</a>
+      <a href="{{siteUrl}}awards">Our Awards</a>
     </div>
 
     <div class="news-sidebar-section news-search-form">
