Changing back to 'awards' for launch

--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -33,7 +33,7 @@
 					<ul class="navigation right-navigation">
 						<li><a href="{{ url('wines') }}" {% if craft.request.getSegment(1) == 'wines' %}class="active"{% endif %}>Wines</a></li>
 						<li><a href="{{ url('olive-oil') }}" {% if craft.request.getSegment(1) == 'olive-oil' %}class="active"{% endif %}>Olive Oil</a></li>
-						<li><a href="{{ url('news') }}" {% if craft.request.getSegment(1) == 'news' %}class="active"{% endif %}>News</a></li>
+						<li><a href="{{ url('awards') }}" {% if craft.request.getSegment(1) == 'awards' %}class="active"{% endif %}>Awards</a></li>
 						<li><a href="{{ url('contact') }}" {% if craft.request.getSegment(1) == 'contact' %}class="active"{% endif %}>Contact</a></li>
 					</ul>
 					<ul class="localization">
