--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -299,7 +299,7 @@ footer
     .banner-headline
       font-size: 72px
   #news-page-banner
-    background-image: image-url('banners/news-banner.jpg')
+    background-image: image-url('banners/news-banner-alt.jpg')
     .banner-headline
       font-size: 72px
 
