Translating contact page and wine types

--- a/craft/templates/wines.html
+++ b/craft/templates/wines.html
@@ -11,40 +11,40 @@
       <h1>{{ entry.title }}</h1>
       <div class="page-text-container">
 
-        <h2>Description</h2>
+        <h2>{{ "Description" | translate }}</h2>
         {{ entry.wineDescription }}
 
-        <h2>Specifications</h2>
+        <h2>{{ "Specifications" | translate }}</h2>
         {% for specification in entry.wineSpecifications %}
           <ul class="wine-specifications">
             <li>
-            <strong>Wine Type:</strong>
+            <strong>{{ "WineType" | translate }}:</strong>
             {{ specification.wineType }}
             </li>
             <li>
-              <strong>Vineyard Location:</strong>
+              <strong>{{ "VineyardLocation" | translate }}:</strong>
               {{ specification.vineyardLocation }}
             </li>
             <li>
-              <strong>Grapes:</strong>
+              <strong>{{ "Grapes" | translate }}:</strong>
               {{ specification.grapes }}
             </li>
             <li>
-              <strong>Exposition:</strong>
+              <strong>{{ "Exposition" | translate }}:</strong>
               {{ specification.exposition }}
             </li>
             <li>
-              <strong>Soil:</strong>
+              <strong>{{ "Soil" | translate }}:</strong>
               {{ specification.soil }}
             </li>
             <li class="rich-text-specification">
-              <strong>Vinification and maturation:</strong>
+              <strong>{{ "Vinification" | translate }}:</strong>
               {{ specification.vinificationAndMaturation }}
             </li>
           </ul>
         {% endfor %}
 
-        <h2>Additional Details</h2>
+        <h2>{{ "Additional" | translate }}</h2>
         {{ entry.wineAdditionalDetails }}
 
       </div>
