--- a/craft/templates/contact.html
+++ b/craft/templates/contact.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="success">
-          <p><em><strong>Thank you for your message!</strong> </br> Someone will be in contact with you shortly.</em></p>
+          <p><em><strong>{{ "Thanks" | translate }}</strong> </br> {{ "Thanks2" | translate }}</em></p>
         </div>
 
         <form method="post" action="" accept-charset="UTF-8">
@@ -29,10 +29,10 @@
           
           <div class="form-left">
  
-            <h3><label for="fromName">Your Name</label></h3>
+            <h3><label for="fromName">{{ "Name" | translate }}</label></h3>
             <input id="fromName" type="text" name="fromName" value="{% if message is defined %}{{ message.fromName }}{% endif %}">
 
-            <h3><label for="fromEmail">Your Email<span class="required">*</span></label></h3>
+            <h3><label for="fromEmail">{{ "Email" | translate }}<span class="required">*</span></label></h3>
             <input id="fromEmail" type="text" name="fromEmail" value="{% if message is defined %}{{ message.fromEmail }}{% endif %}">
             
             <input type="submit" value="Send">
@@ -41,7 +41,7 @@
 
           <div class="form-right">
 
-            <h3><label for="message">Message<span class="required">*</span></label></h3>
+            <h3><label for="message">{{ "Message" | translate }}<span class="required">*</span></label></h3>
             <textarea rows="10" cols="40" id="message" name="message">{% if message is defined %}{{ message.message }}{% endif %}</textarea>
             
           </div>
@@ -51,7 +51,7 @@
 
         </form>
 
-        <p class="prefer_email">Prefer email? You can reach us at <a href="mailto:{{ contactinformation.primaryEmail }}">{{ contactinformation.primaryEmail }}</a></p>
+        <p class="prefer_email">{{ "PreferEmail" | translate }} <a href="mailto:{{ contactinformation.primaryEmail }}">{{ contactinformation.primaryEmail }}</a></p>
 
       </div>
     </div>
