--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -68,7 +68,7 @@
 								{% if banner.bannerVideo %}
 									<div class="banner-cta banner-video"  data-featherlight="#video-{{ loop.index }}">
 										<div class="banner-cta-interior banner-video-interior">
-											<p>{{ "Watch" | translate }</p>
+											<p>{{ "Watch" | translate }}</p>
 										</div>
 									</div>
 									<div id="video-{{ loop.index }}" class="hidden-video">
