--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -81,6 +81,8 @@ header
         &:first-child
           margin-left: 0
     &.right-navigation
+      li
+        margin-right: 8px
       li:last-child
         margin-right: 0
     a
