No more italics

--- a/craft/templates/contact.html
+++ b/craft/templates/contact.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="success">
-          <p><em><strong>{{ "Thanks" | translate }}</strong> </br> {{ "Thanks2" | translate }}</em></p>
+          <p><strong>{{ "Thanks" | translate }}</strong> </br> {{ "Thanks2" | translate }}</p>
         </div>
 
         <form method="post" action="" accept-charset="UTF-8">
